[FIX]map-visible
Erreur d'ID de div simple

--- a/main/local_modules/frontend_listing/static/src/css/frontend_listing.css
+++ b/main/local_modules/frontend_listing/static/src/css/frontend_listing.css
@@ -12,6 +12,7 @@ body {
 }
 .navDirectory {
     padding-top: 50px;
+    z-index: 10;
 }
 .navDirectory .row {
     margin: 0.25em 0;
@@ -37,7 +38,15 @@ body {
     padding: 0 0;
     background: transparent;
 }
-
+#map {
+    position: absolute;
+    top: 0;
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    height: 700px;
+    z-index: -50;
+}
 
 /* BOOTSTRAP Table */
 
